--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Lato:200,400,700,900" rel="stylesheet">
-    <title>React App</title>
+    <title>Evoneering</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
