Implement galleries and other features

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Lato:200,400,700,900" rel="stylesheet">
+    <script type='text/javascript' src='https://static.smartrecruiters.com/job-widget/1.4.2/script/smart_widget.js'></script>
     <title>Evoneering</title>
   </head>
   <body>
